# Frontier-v2

./: .gitignore  CMakeLists.txt  README.md
resources/fragmentshaders/: LightingNoSpecularMap.fs  PBR.fs  depthMap.fs  renderquad.fs
resources/vertexshaders/: LightingNoSpecularMap.vs  PBR.vs  renderquad.vs
src/frontier/: Camera.cpp  Camera.h  Core.cpp  Core.h  Entity.cpp  Entity.h  Input.cpp  Input.h  Mesh.cpp  Mesh.h  MeshRenderer.cpp  MeshRenderer.h  Model.cpp  Model.h  Pooler.cpp  Shader.cpp  Shader.h  Skybox.cpp  Skybox.h  Texture.cpp  Texture.h
src/game/: AsteroidBehavior.cpp  AsteroidBehavior.h  AsteroidSpawner.h  FPSCamera.cpp  FPSCamera.h  LightMove.cpp  LightMove.h  PlayerController.cpp  PlayerController.h  ProjectileBehavior.h  main.cpp
src/graphicsextension/: DepthMap.cpp  DepthMap.h  DirectionalLight.cpp  DirectionalLight.h  FrontierGraphics.h  Light.cpp  Light.h  LightController.cpp  LightController.h  PointLight.cpp  PointLight.h  RenderQuad.cpp  RenderQuad.h  RenderTexture.cpp  RenderTexture.h  SpotLight.cpp  SpotLight.h
